# Tinypad

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  fragment.glsl  index.html  index.js  main.cpp  package-lock.json  package.json  start.txt  styles.css  vertex.glsl
Tinypad_Rinna/: index.html  index.js  instrument.html  package-lock.json  package.json  styles-dark.css  styles-minimal.css  twoindex.html
drawing/: drawing.js  file-io.js
include/: shaders.h
src/: shaders.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
